--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.3",
         "laravel/framework": "^11.9",
+        "laravel/scout": "^10.10",
         "laravel/tinker": "^2.9",
         "spatie/laravel-permission": "^6.9",
         "tightenco/ziggy": "^2.2"
