--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@inertiajs/react": "^1.2.0",
         "bootstrap": "^5.3.3",
+        "lodash": "^4.17.21",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.4",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-toastify": "^10.0.5",
+        "sweetalert2": "^11.12.2",
+        "sweetalert2-react-content": "^5.0.7"
     }
 }
