--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "lodash": "^4.17.21",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.4",
+        "react-bootstrap-typeahead": "^6.3.2",
+        "react-currency-input-field": "^3.8.0",
         "react-dom": "^18.3.1",
         "react-toastify": "^10.0.5",
         "sweetalert2": "^11.12.2",
