--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@inertiajs/react": "^1.2.0",
         "bootstrap": "^5.3.3",
+        "date-fns": "^3.6.0",
         "lodash": "^4.17.21",
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.4",
@@ -27,6 +28,7 @@
         "react-currency-input-field": "^3.8.0",
         "react-datepicker": "^7.3.0",
         "react-dom": "^18.3.1",
+        "react-to-print": "^2.15.1",
         "react-toastify": "^10.0.5",
         "sweetalert2": "^11.12.2",
         "sweetalert2-react-content": "^5.0.7"
